--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,14 @@
+
 {
   "compilerOptions": {
-    "target": "es6"
+    "target": "es6",
+    "checkJs": false
+  },
+  "typeAcquisition": {
+    "include": ["p5"]
   },
   "include": [
     "*.js",
-    "**/*.js",
-    "c:\\Users\\陆豪宏\\.vscode\\extensions\\samplavigne.p5-vscode-1.2.16\\p5types\\global.d.ts"
+    "**/*.js"
   ]
 }
